--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
-      
+      <div class="container">
+        <h1>Калькулятор матриц</h1>
+        <div class="input-section">
+          <h2>Размер матрицы</h2>
     </body>
+      
