--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
-<DOCTYPE html>
-  <html lang="ru">
-    <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Калькулятор матриц</title>
-      <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-      <div class="container">
-        <h1>Калькулятор матриц</h1>
-        <div class="input-section">
-          <h2>Размер матрицы</h2>
-    </body>
-      
+<!DOCTYPE html>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Калькулятор матриц</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1>Калькулятор матриц</h1>
+
+      <div class="matrix-input">
+        <h2>Матрица А</h2>
+      </div>
+      <div class="operations"></div>
+      <div class="results"></div>
+      <script src="script.js"></script>
+  </body>
+</html>
