--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
       <h1>Калькулятор матриц</h1>
 
       <div class="matrix-input">
-        <h2>Матрица А</h2>
+        <h2>Размер матрицы</h2>
       </div>
+      <div id="matrix-contaimer"></div>
+      
       <div class="operations"></div>
-      <div class="results"></div>
+      <h2>Операции</h2>
+      <button>Сложить</button>
+      <button>Умножить</button>
+      <button>Определить</button>
+      <div class="result"></div>
       <script src="script.js"></script>
   </body>
 </html>
