--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           
       <div id="matrix-container"></div>
           
+      <!--Тест-->
       <div class="operations">
         <h2>Операции</h2>
         <button>Сложить</button>
