--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
       </div>
       <div class="input-section">
         <h2>Матрица 1</h2>
-        <label>Строки: <input type="number" id="rows" value="2" min="1" max="10"></label>
-        <label>Столбцы: <input type="number" id="cols" value="2" min="1" max="10"></label>
+        <label>Строки: <input type="number" id="rows" value="3" min="1" max="10"></label>
+        <label>Столбцы: <input type="number" id="cols" value="3" min="1" max="10"></label>
         <button onclick="createMatrix()">Создать матрицу 1</button>
       </div>
 
       <div id="matrix-container"></div>
 
-      <!--Тест-->
       <div class="operations">
         <h2>Операции</h2>
-        <button onclick="transpose()">Транспонирвать 1</button>
+        <button onclick="transposeMatrix1()">Транспонирвать 1</button>
         <button onclick="multiply()">Умножить 1 на число</button>
-        <button onclick="calculate()">Определитель 1</button>
+        <button onclick="calculateDeterminant()">Определитель 1</button>
       </div>
       <div id="result">
         <h2>Результат</h2>
