--- a/index.html
+++ b/index.html
@@ -24,9 +24,13 @@
 
       <div class="operations">
         <h2>Операции</h2>
+        <button onclick="add()">Сложить 1</button>
+        <button onclick="subtract()">Вычесть 1</button>
         <button onclick="transposeMatrix1()">Транспонирвать 1</button>
-        <button onclick="multiply()">Умножить 1 на число</button>
+        <button onclick="multiply()">Умножить</button>
+        <button onclick="multiplybyscalar()">Умножить 1 на число</button>
         <button onclick="calculateDeterminant()">Определитель 1</button>
+        <button onclick="Rank()">Ранг матрицы</button>
       </div>
       <div id="result">
         <h2>Результат</h2>
