--- a/index.html
+++ b/index.html
@@ -55,6 +55,6 @@
       <p>Автор: AsaA1220 | <a href="https://github.com/AsaA1220/matrix-calculator" target="_blank">GitHub</a></p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="scriptNew.js"></script>
   </body>
 </html>
