--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button onclick="transpose()">Транспонирование</button>
         <button onclick="multiply()">Умножить матрицы</button>
         
-        <h3>Вычисления:</h3>
+        <h3>Вычисления:</h3> <!--ntcn-->
         <button onclick="Rank()">Найти ранг матрицы</button>
         <button onclick="calculateDeterminant()">Вычислить определитель</button>
 
