--- a/index.html
+++ b/index.html
@@ -6,47 +6,78 @@
     <title>Интерактивный визуализатор матричных операций</title>
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
     <div class="container">
       <h1>Калькулятор матриц</h1>
+
       <!--Ввод размера первой матрицы-->
       <div class="instr">
         <p><strong>Инструкция:</strong>Введите размер матрицы, нажмите "создать", заполните ячейки и выберите нужную операцию</p>
+        <p class="small">
+        Для СЛАУ используйте <b>матрицу A</b> как расширенную: размер nx(n+1).</p>
       </div>
 
       <div class="input-section">
         <h2>Шаг 1: Создание матрицы</h2>
-        <label>Строки: <input type="number" id="rows" value="3" min="1" max="10"></label>
-        <label>Столбцы: <input type="number" id="cols" value="3" min="1" max="10"></label>
-        <button onclick="createMatrix()">Создать матрицу</button>
-        <button onclick="clearAll()">Очистить все</button>
-      </div>
-
-      <div id="matrix-container"></div>
-
-      <div class="operations">
-        <h2>Шаг 2: Выберите операцию</h2>
-
-        <h3>Базовые операции</h3>
-        <button onclick="add()">Сложить две матрицы</button>
-        <button onclick="subtract()">Вычесть матрицы</button>
-        <button onclick="transpose()">Транспонирование</button>
-        <button onclick="multiply()">Умножить матрицы</button>
         
-        <h3>Вычисления:</h3> <!--ntcn-->
-        <button onclick="Rank()">Найти ранг матрицы</button>
-        <button onclick="calculateDeterminant()">Вычислить определитель</button>
+        <div class = "grid">
+          <div class="card">
+            <h3>Матрица А</h3>
+            <label>Строки: <input type="number" id="rowsA" value="3" min="1" max="10"></label>
+            <label>Столбцы: <input type="number" id="colsA" value="3" min="1" max="10"></label>
+            <button type="button" onclick="createMatrixA()">Создать A</button>
+          </div>
 
-        <h3>Решение систем уравнений:</h3>
-        <button onclick="Gauss()">Решить СЛАУ (метод Гаусса)</button>
-        <p style="font-size: 12px; color: #666;">Для СЛАУ создайте расширенную матрицу размером n×(n+1)</p>
+          <div class="card">
+          <h3>Матрица B</h3>
+          <label>Строки: <input type="number" id="rowsB" value="3" min="1" max="10"></label>
+          <label>Столбцы: <input type="number" id="colsB" value="3" min="1" max="10"></label>
+          <button type="button" onclick="createMatrixB()">Создать B</button>
+        </div>
       </div>
-      
-      <div id="result">
-        <h2>Результат</h2>
-        <div id="result-output"></div>
+
+      <div class="actions-row">
+        <button type="button" class="danger" onclick="clearAll()">Очистить всё</button>
       </div>
     </div>
+
+    <div class="grid">
+      <div class="card">
+        <h2>Матрица A</h2>
+        <div id="matrixA-container"></div>
+      </div>
+
+      <div class="card">
+        <h2>Матрица B</h2>
+        <div id="matrixB-container"></div>
+      </div>
+    </div>
+
+    <div class="operations">
+      <h2>Шаг 2: Операции</h2>
+
+      <h3>Базовые</h3>
+      <button type="button" onclick="add()">A + B</button>
+      <button type="button" onclick="subtract()">A − B</button>
+      <button type="button" onclick="multiplyMatrices()">A × B</button>
+      <button type="button" onclick="transposeA()">Aᵀ</button>
+      <button type="button" onclick="multiplyScalarA()">A × число</button>
+
+      <h3>Вычисления (по A)</h3>
+      <button type="button" onclick="calculateDeterminant()">Определитель det(A)</button>
+      <button type="button" onclick="Rank()">Ранг rank(A)</button>
+
+      <h3>СЛАУ (по расширенной A)</h3>
+      <button type="button" onclick="Gauss()">Метод Гаусса</button>
+      <p class="small">Для СЛАУ сделай матрицу A размера n×(n+1).</p>
+    </div>
+
+    <div id="result">
+      <h2>Результат</h2>
+      <div id="result-output"></div>
+    </div>
+  </div>
 
     <footer class="info">
       <h3>О проекте</h3>
@@ -54,6 +85,6 @@
       <p>Автор: AsaA1220 | <a href="https://github.com/AsaA1220/matrix-calculator" target="_blank">GitHub</a></p>
     </footer>
 
-    <script src="scriptNew.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
