--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 
       <h3>Базовые</h3>
       <button type="button" onclick="add()">A + B</button>
-      <button type="button" onclick="subtract()">A − B</button>
-      <button type="button" onclick="multiplyMatrices()">A × B</button>
+      <button type="button" onclick="subtract()">A - B</button>
+      <button type="button" onclick="multiplyMatrices()">A x B</button>
       <button type="button" onclick="transposeA()">Aᵀ</button>
-      <button type="button" onclick="multiplyScalarA()">A × число</button>
+      <button type="button" onclick="multiplyScalarA()">A * число</button>
 
       <h3>Вычисления (по A)</h3>
       <button type="button" onclick="calculateDeterminant()">Определитель det(A)</button>
@@ -70,7 +70,7 @@
 
       <h3>СЛАУ (по расширенной A)</h3>
       <button type="button" onclick="Gauss()">Метод Гаусса</button>
-      <p class="small">Для СЛАУ сделай матрицу A размера n×(n+1).</p>
+      <p class="small">Для СЛАУ создайте матрицу A размера n*(n+1).</p>
     </div>
 
     <div id="result">
