--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
     <div class="grid">
       <div class="card">
         <h2>Матрица A</h2>
+        <button type="button" onclick="randomMatrixA()" style="background: #9c27b0;">Случайная</button>
         <div id="matrixA-container"></div>
       </div>
 
       <div class="card">
         <h2>Матрица B</h2>
+        <button type="button" onclick="randomMatrixB()" style="background: #9c27b0;">Случайная</button>
         <div id="matrixB-container"></div>
       </div>
     </div>
