--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <h1>Калькулятор матриц</h1><!--test-->
+      <h1>Калькулятор матриц</h1>
 
       <!--Инструкция-->
       <div class="instructions">
